# nodesys

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: CMakeLists.txt  node.cpp  node.h  node.hpp
